# PJM-to-text

./: .gitignore  31October_2009_Saturday_tagesschau-7151.npy  Caddyfile  README.md  annotation_preprocess.py  ctcLoss-test  docker-compose gcp.yml  docker-compose.local.yml  docker-compose.yml  lstm_test  mmpose_test.py  pyproject.toml  requirements.txt  run_test.sh
.github/workflows/: lint.yml
datasets/: README.md  phoenix_dataloader.py
hive_app/: Dockerfile  README.md  main.py  mediapipe_process.py  requirements.txt
how2sign_annotations/: how2sign_test_gloss.csv  how2sign_val_gloss_vocab.csv
mediapipe_holistic_test/: medhol.py  readme.md  requirements.txt
mediapipe_test/: extract_frames.py  main.py  mediapipe_detection.py  mediapipe_fps_benchmark.py
models/stgcn/: README.md  models.py
phoenix_preprocessing/: README.md  extract_phoenix.py  extract_phoenix_samples.py  result_visualization.py
phoenix_preprocessing/sample_results/: 01April_2010_Thursday_heute-6697.npy  01April_2010_Thursday_heute-6698.npy  01December_2011_Thursday_heute-3058.npy  01December_2011_Thursday_heute-3060.npy
server_app/: Dockerfile  database.py  main.py  models.py
src/: model.py  train.py
st_gcn/: st_gcn.py  trainer.py
st_gcn/models/backbones/: __init__.py  stgcn.py
