[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pjm-to-text"
version = "0.1.0"
description = "Translating sign language to text"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "mediapipe",
    "opencv-python",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
]


[tool.ruff]
target-version = "py310"
line-length = 100

extend-exclude = [
    "models/stgcn",
]

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google" 

[tool.mypy]
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.uv]
package = false

[[tool.mypy.overrides]]
module = [
    "mediapipe.*",
    "torch.*",
    "cv2.*",
    "matplotlib.*"
]
ignore_missing_imports = true
